# ats

./: .dockerignore  .env.example  .gitignore  Dockerfile  Edison Leung.md  Harry Zhang.md  README.md  Weijing Lin.md  pyproject.toml  render.yaml  sample JD.md  sample-jd.txt
ats/: __init__.py  applications.py  cli.py  config.py  generate.py  gistlog.py  importer.py  llm.py  match.py  pipeline.py  profiles.py  rules.py  schema.py  storage.py
ats/render/: __init__.py  html.py  pdf.py
backend/: README.md  __init__.py  __main__.py  app.py
frontend/: app.js  index.html  style.css
profiles/_TEMPLATE/: profile.md  rules.md
profiles/allen-zhang/: profile.md  prompt.md  template.html
profiles/colin-wang/: profile.md  prompt.md
profiles/corbin-lee/: profile.md  rules.md
profiles/duo-zhao/: profile.md  prompt.md
profiles/edison-leung/: profile.md  rules.md
profiles/gavin-li/: profile.md  prompt.md
profiles/harry-zhang/: profile.md  rules.md
profiles/michael-chen/: profile.md  prompt.md
profiles/weijing-lin/: profile.md  rules.md
sample-jds/: payments-jd.txt.tmp.24828.e43cdb3ea802
scripts/: ats-clip.cmd  setup-hotkey.ps1  setup-hotkey.sh
shared/: basic_rule.md
templates/: .gitkeep  cover-letter.html
